--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,13 @@ dataset/logistic_regression_tfidf.pkl
 dataset/doc2vec_model.pkl
 dataset/tfidf_vectoriser.pkl
 
+server/node_modules/*
+server/package-lock.json
+frontend/node_modules/*
+ui/node_modules/*
+ui/package-lock.json
+ui/node_modules/*/*
+
 =======
 .DS_Store
 .venv
